fix to center map on mobile

--- a/src/css/navigationView.css
+++ b/src/css/navigationView.css
@@ -7,15 +7,13 @@
 /* Nav bar as a footer on mobile */
 .nav-menu{
     display: flex;
-    align-items:stretch;
-    position:absolute;
+    position: fixed;
     bottom: 0;
-    width: 100%;
+    width: 97%;
+    height: 10%;
     background-color: white;
     z-index: 1000;
-    height: 10%;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    justify-content: space-between;  
 }
 
 .nav-menu-circle {
@@ -23,12 +21,10 @@
   height: 60px;
   border-radius: 50px;
   position: fixed;
-  z-index: 1;
   background-color: #F7B088;
 }
 
  .nav-menu #enabled:hover{
-     width: 100%;
     border-radius: 50%;
     position:sticky;
     z-index: 2;
@@ -40,14 +36,14 @@
     height: 60px;
     border-radius: 50px;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     background-color: lightgray;
   }
 
 .nav-menu #disabled2:hover{
     border-radius: 50%;
     position:sticky;
-    z-index: 2;
+    z-index: 3;
     background-color: lightgray;
 }
 
@@ -57,14 +53,13 @@
     display: flex;
     align-items: center;
     text-decoration: none;
-    padding: 0 1rem;
     cursor: pointer;
     justify-content:space-around
 }
 
 .nav-link img{
-    width: 100%;
-    z-index: 2;
+    width: 90%;
+    z-index: 10;
 }
 
 .nav-button{
